# Skin-Diseases-Prediction-APP

./: main copy.py  main.py  pyproject.toml
artifacts/: class_mapping.json  lda.joblib  pca.joblib  scaler.joblib
