[project]
name = "skin-disease-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "keras>=3.11.3",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "tensorflow>=2.20.0",
]
